--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=TODO
-sonar.organization=TODO
+sonar.projectKey=Sopra-FS24-group-30_sopra-fs24-group-30-client
+sonar.organization=sopra-fs24-group-30
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=client
