--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.4.3",
     "serve": "^14.2.1",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "ws": "^8.16.0"
   },
   "scripts": {
     "dev": "react-scripts start",
