--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.24.0",
   "private": true,
   "dependencies": {
+    "agora-rtc-sdk-ng": "^4.20.2",
     "axios": "^1.6.7",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
