Able to create the game Solves issue: - #216 (backend)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.24.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.7",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
@@ -11,6 +12,7 @@
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.4.3",
     "serve": "^14.2.1",
+    "socket.io-client": "^4.7.5",
     "typescript": "^3.2.1",
     "ws": "^8.16.0"
   },
