--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.4.3",
     "serve": "^14.2.1",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "typescript": "^3.2.1",
     "ws": "^8.16.0"
