--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.4.3",
     "serve": "^14.2.1",
+    "sock-client": "^0.0.0",
     "socket.io-client": "^4.7.5",
+    "sockjs-client": "^1.6.1",
     "typescript": "^3.2.1",
     "ws": "^8.16.0"
   },
