--- a/Zuegs.jsonc
+++ b/Zuegs.jsonc
@@ -120,7 +120,23 @@
     "address": "/topic/board/gameEnd",
     "data": {
         "winners": ["1", "3"], //players that won
-        "reason": ""//idk what yet
+        "reason": ["1", "marooned"] //player which had the wincondition
+    }
+},
+
+{
+    "address": "/topic/board/gameEnd",
+    "data": {
+        "winners": ["3"], //players that won
+        "reason": ["1", "jacksparrow"] //player which had jacksparrow at the end of the game
+    }
+},
+
+{
+    "address": "/topic/board/gameEnd",
+    "data": {
+        "winners": ["1", "3"], //players that won
+        "reason": ["1", "maxmoney"] //player which had the highest amount of money
     }
 },
 
@@ -128,6 +144,15 @@
     "address": "/topic/board/goal",
     "data": {
         "result": 5
+    }
+},
+
+{
+    "address": "/topic/board/winCondition",
+    "data": {
+        "name": "Golden",
+        "progress": 3,
+        "total": 7
     }
 },
 
