--- a/Zuegs.jsonc
+++ b/Zuegs.jsonc
@@ -61,8 +61,8 @@
     "address": "/topic/board/money",
     "data": {
         "1": { //playerId
-            "newAmountOfMoney": 50, //new amount of money for player 1
-            "changeAmountOfMoney": 3 //amount of money
+            "newAmountOfMoney": 50, //new amount of coins for player 1
+            "changeAmountOfMoney": 3 //amount of coins
         }
         
     }
@@ -136,7 +136,7 @@
     "address": "/topic/board/gameEnd",
     "data": {
         "winners": ["1", "3"], //players that won
-        "reason": ["1", "maxmoney"] //player which had the highest amount of money
+        "reason": ["1", "maxmoney"] //player which had the highest amount of coins
     }
 },
 
@@ -179,6 +179,34 @@
     "address": "/board/useItem",
     "data": {
         "usedItem": "MagicMushroom" //used Item ["TheBrotherAndCo", "MagicMushroom", "SuperMagicMushroom", "UltraMagicMushroom", "OnlyFansSub", "TreasureChest"]
+    }
+},
+
+{
+    "address": "/board/items",
+    "data": {
+        "usableUsed": "InsertItemName",
+        "choice": {
+            "playerId": "1" //if playerId isnt needed, choice is an empty dict
+        }
+    }
+},
+
+{
+    "address": "/board/ultimate",
+    "data": {
+        "usableUsed": "InsertUltimateName",
+        "choice": {}
+    }
+},
+
+{
+    "address": "/board/cards",
+    "data": {
+        "usableUsed": "G26",
+        "choice":{
+            "count": 6 //only applicable to gold cards, empty dict otherwise
+        }
     }
 }
 
